<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="widget_name">Turf Widget</string>
    <string name="prefs_name">Turf Widget Settings</string>    
    
    <string name="user_email_title">Turf account</string>
    <string name="user_email_summary">Your account email used for Turf</string>
    <string name="user_email_dialog">Enter your Google account email</string>
    
    <string name="update_freq_title">Update Frequency</string>
    <string name="update_freq_dialog">Choose how often to update</string>
    
    <string name="vibrate_title">Vibrate</string>
    <string name="vibrate_summary">Vibrate on alert</string>
    
    <string name="notify_title">Show notifications</string>
    <string name="notify_summary">Show notification when a zone is lost</string>

    <string name="layout_title">Layout</string>
    <string name="layout_dialog">Choose widget layout</string>
    
    	
    <string name="unknown"></string>
    <string name="power">Power</string>
    <string name="per_hour">Per hour</string>
    <string name="zones">Zones</string>
    <string name="place">Place</string>
    <string name="alert">Alert</string>
    
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    
    <string name="ticker_text">Zone lost</string>
</resources>
