<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="vibrate"
        android:summary="@string/vibrate_summary"
        android:title="@string/vibrate_title" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="notify"
        android:summary="@string/notify_summary"
        android:title="@string/notify_title" />

    <EditTextPreference
        android:dialogTitle="@string/user_email_dialog"
        android:key="user_email"
        android:summary="@string/user_email_summary"
        android:title="@string/user_email_title" />

    <ListPreference
        android:defaultValue="1800000"
        android:dialogTitle="@string/update_freq_dialog"
        android:entries="@array/update_name"
        android:entryValues="@array/update_freq"
        android:key="update_freq"
        android:summary="@string/update_freq_dialog"
        android:title="@string/update_freq_title" />
    
    <ListPreference
        android:defaultValue="widget"
        android:dialogTitle="@string/layout_dialog"
        android:entries="@array/layout_name"
        android:entryValues="@array/layout_id"
        android:key="layout"
        android:summary="@string/layout_dialog"
        android:title="@string/layout_title" />

</PreferenceScreen>
